--- a/examples/starter/package.json
+++ b/examples/starter/package.json
@@ -1,7 +1,7 @@
 {
   "name": "starter-example",
   "version": "0.1.0",
-  "description": "Minimal starter example for Claude Answer Engine",
+  "description": "Minimal starter example for Site Agent framework",
   "type": "module",
   "private": true,
   "scripts": {
@@ -12,7 +12,7 @@
     "start:server": "node dist/server.js"
   },
   "dependencies": {
-    "@claude-ae/core": "file:../../packages/core"
+    "@site-agent/core": "file:../../packages/core"
   },
   "devDependencies": {
     "@types/node": "^24.6.2",
